[package]
name = "signal-tlsd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", default-features = false, features = ["derive", "env", "error-context", "help", "std"] }
env_logger = { version = "0.11", default-features = false }
log = "0.4"
tokio = { version = "1.50", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-rustls = "0.26"
