[package]
name = "signal-tlsd"
version = "0.1.0"
description = "Standalone Rust implementation of Signal's domain fronting TLS proxy"
authors = ["kpcyrd <git@rxv.cc>"]
license = "MIT-0"
repository = "https://github.com/kpcyrd/signal-tlsd"
edition = "2024"

[dependencies]
anyhow = "1"
arc-swap = "1"
clap = { version = "4", default-features = false, features = ["derive", "env", "error-context", "help", "std"] }
env_logger = { version = "0.11", default-features = false }
log = "0.4"
tokio = { version = "1.50", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = "0.26"
